--- a/android/lib/resource/src/main/res/values-ja/plurals.xml
+++ b/android/lib/resource/src/main/res/values-ja/plurals.xml
@@ -12,6 +12,9 @@
     <plurals name="days">
         <item quantity="other">%1$d日</item>
     </plurals>
+    <plurals name="number_of_locations">
+        <item quantity="other">%1$d 件の場所</item>
+    </plurals>
     <plurals name="months">
         <item quantity="other">%1$dヶ月</item>
     </plurals>
