--- a/android/lib/resource/src/main/res/values-th/plurals.xml
+++ b/android/lib/resource/src/main/res/values-th/plurals.xml
@@ -12,6 +12,9 @@
     <plurals name="days">
         <item quantity="other">%1$d วัน</item>
     </plurals>
+    <plurals name="number_of_locations">
+        <item quantity="other">%1$d ตำแหน่งที่ตั้ง</item>
+    </plurals>
     <plurals name="months">
         <item quantity="other">%1$d เดือน</item>
     </plurals>
