--- a/android/lib/resource/src/main/res/values-zh-rCN/plurals.xml
+++ b/android/lib/resource/src/main/res/values-zh-rCN/plurals.xml
@@ -12,6 +12,9 @@
     <plurals name="days">
         <item quantity="other">%1$d 天</item>
     </plurals>
+    <plurals name="number_of_locations">
+        <item quantity="other">%1$d 个位置</item>
+    </plurals>
     <plurals name="months">
         <item quantity="other">%1$d 个月</item>
     </plurals>
