--- a/android/lib/resource/src/main/res/values-nb/plurals.xml
+++ b/android/lib/resource/src/main/res/values-nb/plurals.xml
@@ -16,6 +16,10 @@
         <item quantity="one">%1$d dag</item>
         <item quantity="other">%1$d dager</item>
     </plurals>
+    <plurals name="number_of_locations">
+        <item quantity="one">%1$d plassering</item>
+        <item quantity="other">%1$d plasseringer</item>
+    </plurals>
     <plurals name="months">
         <item quantity="one">%1$d måned</item>
         <item quantity="other">%1$d måneder</item>
