--- a/android/lib/resource/src/main/res/values-tr/plurals.xml
+++ b/android/lib/resource/src/main/res/values-tr/plurals.xml
@@ -16,6 +16,10 @@
         <item quantity="one">%1$d gün</item>
         <item quantity="other">%1$d gün</item>
     </plurals>
+    <plurals name="number_of_locations">
+        <item quantity="one">%1$d konum</item>
+        <item quantity="other">%1$d konum</item>
+    </plurals>
     <plurals name="months">
         <item quantity="one">%1$d ay</item>
         <item quantity="other">%1$d ay</item>
