--- a/android/lib/resource/src/main/res/drawable/icons_more_circle.xml
+++ b/android/lib/resource/src/main/res/drawable/icons_more_circle.xml
@@ -3,7 +3,7 @@
         android:height="24dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
-    <path android:fillAlpha="0.6"
+    <path
           android:fillColor="#FFFFFF"
           android:fillType="evenOdd"
           android:pathData="M12,24A12,12 0,0 1,3.515 3.515a12,12 0,1 1,16.97 16.97A11.922,11.922 0,0 1,12 24zM10.445,16.044L10.445,17.6h3.111v-1.556zM7.333,12.155v1.556h9.333v-1.556zM5,8.267v1.556h14L19,8.267z"
