--- a/android/lib/resource/src/main/res/drawable/icon_chevron.xml
+++ b/android/lib/resource/src/main/res/drawable/icon_chevron.xml
@@ -1,12 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="14dp"
-        android:height="24dp"
-        android:viewportWidth="14.0"
-        android:viewportHeight="24.0">
-    <group android:translateX="4.0"
-           android:translateY="6.0">
-        <path android:fillColor="#FFFFFF"
-              android:pathData="M0.335204989,1.95371785 L4.23669259,6 L0.335204989,10.0462822 C-0.111734996,10.4932221 -0.111734996,11.217855 0.335204989,11.664795 C0.782144974,12.111735 1.49826561,12.111735 1.9452056,11.664795 L6.66818642,6.80553188 C6.88657769,6.58714061 6.99779844,6.29559541 6.99881099,6.00303766 C6.99779844,5.70440459 6.88657769,5.41285939 6.66818642,5.19446812 L1.9452056,0.335204989 C1.49826561,-0.111734996 0.782144974,-0.111734996 0.335204989,0.335204989 C-0.111734996,0.782144974 -0.111734996,1.50677786 0.335204989,1.95371785 Z" />
-    </group>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group>
+    <clip-path
+        android:pathData="M0,0h24v24h-24z"/>
+    <path
+        android:pathData="M16.707,9.293C16.317,8.902 15.683,8.902 15.293,9.293L12,12.586L8.707,9.293C8.317,8.902 7.683,8.902 7.293,9.293C6.902,9.683 6.902,10.317 7.293,10.707L11.293,14.707C11.683,15.098 12.317,15.098 12.707,14.707L16.707,10.707C17.098,10.317 17.098,9.683 16.707,9.293Z"
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"/>
+  </group>
 </vector>
